--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/cpetillot/JS-Project#readme",
   "dependencies": {
+    "@ckeditor/ckeditor5-build-classic": "^19.0.0",
     "parcel-bundler": "^1.12.4"
   },
   "devDependencies": {
